fix .checkradio v-align

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -20667,3 +20667,7 @@ body::-webkit-scrollbar-thumb {
   background-color: #00d1b2;
 }
 
+.is-checkradio[type=checkbox] + label {
+  padding-top: 1px;
+}
+
